# StereoBoy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  StereoBoy_FW.c  cmake_install.cmake  compile_commands.json  difference.txt  end_session.py  env_variables  hw_config.c  main.c  ps1053b.plg  report.py  sd_card_serial.c  start_session.py  stereoBoy_MGB.kicad_prl  stereoBoy_MGB.kicad_pro
include/: FatFsSd.h  FatFsSd_C.h
lib/: adc.c  adc.h  buttons.c  codec.c  dac.c  dac.h  display.c  display.h  led_driver.c  led_driver.h  vs1053.c  vs1053.h
lib/adc/: adc.c  adc.h
lib/btns/: buttons.c  buttons.h
lib/buttons/: buttons.c  buttons.h
lib/codec/: codec.c  codec.h  vs1053.c  vs1053.h
lib/dac/: dac.c  dac.h
lib/display/: album_art.c  album_art.h  display.c  display.h  display_pio.c  display_pio.h  fft.c  fft.h  lissajous.c  lissajous.h  picojpeg.c  visualizers.h
lib/font/: bit_font.c  find_font_char.c  font.c  font.h
lib/images/: raspberry_256x256_rgb565.h
lib/led_driver/: SB_PCA9685.c  SB_PCA9685.h  led_driver.c  led_driver.h
lib/pot/: pot.c  pot.h
lib/radiomag/: radiomag_util.c  radiomag_util.h  si4705.c  si4705.h
lib/sb_util/: core1_entry.c  core1_entry.h  filehelper.c  filehelper.h  firmware.h  global_vars.h  hw_map.h  jukebox.c  sb_init.c  sb_init.h  sb_util.c  sb_util.h
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base_headers/: Makefile  (+1 more)
pico-sdk/tools/: Makefile  cmake_install.cmake
pico_examples/bootloaders/uart/: uart-pt.json
reports/: report_1.txt  report_2.txt  report_2025-10-27_01-14-18.txt  report_3.txt  report_sample.txt  session_number
scripting/: archive.sh  font2header.py  output.c  output.h  output.txt  test.py
scripting/chicago_small/: chicago_small.fnt  test.py
src/: SB_PCA9685.c  SB_PCA9685.h  StereoBoy_FW.c  StereoBoy_FW_shubham.c  blink_demo.c  btn_display_test.c  buttonTest.c  buttons_demo.c  codec.c  codec.h  display_demo.c  driverInterface.c  driverInterface.h  driver_vs1053b_basic.h  driver_vs1053b_interface.c  driver_vs1053b_interface.h  driver_vs1053b_patch_wav.h  font.h  font.hh  font_13_24.hh  hw_config.c  jukebox.c  led_driver.c  main.c  radiomagDemo.c  source.c  source.h  testFont.h  text_display_demo.c
src/drivers/: SB_PCA9685.c  SB_PCA9685.h  driver_vs1053b_interface.c  driver_vs1053b_patch_flac.h  driver_vs1053b_patch_ogg_venc44k2q05.h
src/ff15/source/: ffconf.h
(+186 files in other folders)
